AM_CFLAGS =-I$(top_srcdir)/src/lib -Wall

# The libraries to build
lib_LIBRARIES = libdfym-base.a

# Where to install the headers on the system
libdfym_base_adir = $(includedir)/dfym-base

# The header files to be installed
libdfym_base_a_HEADERS = \
										     dfym_base.h

# The files to add to the library and to the source distribution
libdfym_base_a_SOURCES = \
										     $(libmylib_a_HEADERS) \
										     dfym_base.c
